@@ -5,6 +5,10 @@ CHANGES
 0.4 (unreleased)
 ----------------
 
+- If a one-page checkout succeeds, show the form's thank you page rather
+  than the GetPaid thank you message.
+  [davisagli]
+
 - Allow custom PloneFormGen fields to supply their own line item fields
   by registering a (cart, field) adapter to ILineItemFactory.
   [davisagli]
